# WeEdit

./: .gitattributes  .gitignore  LICENSE  index.html  package-lock.json  package.json  run.ps1  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vite.web.config.ts
.github/workflows/: release.yml
scripts/: build-linux.sh  clean-installers.mjs  fetch-ffmpeg.mjs  release.ps1  release.py
server/: README.md  package.json  signaling.mjs
server/deploy/: install.sh  nginx-weedit.conf  weedit-signaling.service
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AudioPanel.tsx  ClipBlock.tsx  CollabModal.tsx  CollaboratorCursors.tsx  ErrorBoundary.tsx  ExportModal.tsx  GpuBadge.tsx  HistoryPanel.tsx  Inspector.tsx  LibraryPanel.tsx  MediaLibrary.tsx  MediaSyncIndicator.tsx  NasPanel.tsx  Preview.tsx  PreviewStage.tsx  SettingsModal.tsx  Sidebar.tsx  StockPanel.tsx  TextPanel.tsx  Timeline.tsx  TopBar.tsx  TwitchPanel.tsx  UpdaterDialog.tsx  WebBanner.tsx
src/hooks/: useAutoSave.ts  usePlayback.ts  useShortcuts.ts
src/lib/: audioGain.ts  clips.ts  config.ts  customDrag.ts  exportFfmpeg.ts  ffmpeg.ts  freesound.ts  gpu.ts  history.ts  jamendo.ts  links.ts  media.ts  nas.ts  ncs.ts  pexels.ts  platform.ts  project.ts  shortcuts.ts  stock.ts  stockAudio.ts  twitch.ts  updater.ts  waveform.ts  ytdlp.ts
src/state/: collab.ts  downloads.ts  editor.ts  exports.ts  integrations.ts  (+3 more)
website/: README.md  index.html  main.js  styles.css
(+12 files in other folders)
