[package]
name = "weedit"
version = "0.0.1"
description = "WeEdit — desktop video editor for Twitch VODs"
authors = ["WeEdit"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "weedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# rustls-tls so we don't drag OpenSSL into a desktop binary; gzip/brotli for
# the various CDNs Pexels (and future stock providers) redirect to.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
tokio = { version = "1", features = ["fs"] }
# Content-addressing + chunk encoding for peer-to-peer media sync (collab).
sha2 = "0.10"
base64 = "0.22"
